--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-toast-notification": "^3.1.1"
