--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
+    "tailwindcss": "^3.3.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-toast-notification": "^3.1.1"
