--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "tailwindcss": "^3.3.3",
-    "vue": "^3.2.13",
+    "vue": "^3.3.9",
     "vue-router": "^4.0.3",
     "vue-toast-notification": "^3.1.2"
   },
